--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@electron-forge/maker-rpm": "^6.0.4",
     "@electron-forge/maker-squirrel": "^6.0.4",
     "@electron-forge/maker-zip": "^6.0.4",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.0.4",
     "electron": "^22.0.2"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
-    "electron-store": "^8.1.0"
+    "electron-store": "^8.1.0",
+    "hazardous": "^0.3.0"
   }
 }
